[package]
name = "bgt-cli"
version = "0.2.3"
edition = "2024"
authors = ["Laurence Stock-Tully"]
description = "A simple Rust CLI tool to manage monthly budgets using TOML config files"
readme = "README.md"
license = "MIT"
repository = "https://github.com/lst1000/bgt-cli"
homepage = "https://github.com/lst1000/bgt-cli"
keywords = ["budget", "cli", "finance", "toml", "personal"]
categories = ["command-line-utilities", "finance", "value-formatting"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE", "example.toml"]

[dependencies]
dirs = "6.0.0"
toml = "0.9.8"
regex = "1.12.3"
uk-tax = "0.1.3"
indexmap = { version = "2.13.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
